--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,9 +6,26 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: rgb(255, 249, 223); */
-  background-color: rgb(252, 243, 206);
-  /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQpDjrY7DbGVhyimsbuhpx399TYzUC-nTMGw&usqp=CAU"); */
+  /* background-color: rgb(252, 243, 206); */
+  background-image: url("https://wallpaperaccess.com/full/5296578.jpg");
+  /* background-image: url("./components/photos/background.jpg");*/
+  background-repeat: no-repeat;
+  background-size: cover; 
 }
+
+/* .outermost::before{
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  background-image: url("./components/photos/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -38,7 +55,7 @@ code {
 #dp {
   float: right !important;
   margin-right: 20px;
-  margin-top: 5px !important;
+  /* margin-top: 5px !important; */
 }
 
 #fourth-btn {
@@ -49,6 +66,10 @@ code {
 
 #right{
   float: right;
+}
+
+#poster{
+  opacity: 0.7;
 }
 
 #edit-poster {
@@ -71,6 +92,9 @@ code {
   margin-left: auto;
   margin-right: auto;
   /* padding: 3%; */
+}
+#logo{
+  border-radius: 50%;
 }
 #btn {
   background-color: #d7d1ac !important;
