--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
 }
 
@@ -13,9 +13,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: rgb(255, 249, 223); */
   background-color: rgb(252, 243, 206);
-  /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQpDjrY7DbGVhyimsbuhpx399TYzUC-nTMGw&usqp=CAU"); */
 }
 
 code {
@@ -24,7 +22,6 @@ code {
 }
 
 .navbar {
-  /* background-color: #D7D1AC; */
   padding: 0.7%;
 }
 
@@ -39,7 +36,6 @@ code {
 }
 
 #third-btn {
-  /* float: right !important; */
   margin-right: 20px !important;
 }
 
@@ -50,7 +46,6 @@ code {
 }
 
 #fourth-btn {
-  /* float: right !important; */
   margin-right: 20px;
   background-color: #d7d1ac !important;
 }
@@ -62,7 +57,6 @@ code {
 #edit-poster {
   background-color: #d7d1ac;
   position: relative;
-  /* top: 50%; */
   left: 89%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -78,7 +72,6 @@ code {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  /* padding: 3%; */
 }
 #btn {
   background-color: #d7d1ac !important;
@@ -89,15 +82,34 @@ code {
 }
 .field {
   background-color: #d7d1ac;
-  /* border-radius: 4px; */
 }
 
 .handle2 {
-  /* position: relative; */
   float: right;
 }
 
 #apply {
   background-color: #d7d1ac;
   margin-top: 15px;
+} */
+
+
+body {
+  /* margin: 0px; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* background-color: rgb(255, 249, 223); */
+  /* background-color: rgb(252, 243, 206); */
+  background-image: url("https://wallpaperaccess.com/full/5296578.jpg");
+  /* background-image: url("./components/photos/background.jpg");*/
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
