--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+
 
 html, body {
   margin: 0;
@@ -9,16 +7,27 @@ html, body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  /* margin: 0px; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: rgb(255, 249, 223); */
+  /* background-color: rgb(252, 243, 206); */
+  background-image: url("https://wallpaperaccess.com/full/5296578.jpg");
+  /* background-image: url("./components/photos/background.jpg");*/
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+.App-header{
+  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
