--- a/client/src/components/public/Navbar/style.css
+++ b/client/src/components/public/Navbar/style.css
@@ -7,6 +7,12 @@
   display: none;
 }
 
+.link{
+    color: black;
+    font-weight: 700;
+    text-decoration: none;
+}
+
 @media only screen and (max-width: 500px) {
   .club-logo {
     height: 50px;
