--- a/client/src/components/admin/Section/Section.css
+++ b/client/src/components/admin/Section/Section.css
@@ -9,10 +9,11 @@
 
 .header{
     display: inline;
-    
+
 }
 
-#add{
+#add , #update {
     float: right;
     background-color: #e7e2c3 !important;
+    margin: 5px;
 }
