--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,8 +16,8 @@ html, body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     /* background-color: rgb(255, 249, 223); */
-    /* background-color: rgb(252, 243, 206); */
-    background-image: url("https://wallpaperaccess.com/full/5296578.jpg");
+    /* background-color: red; */
+    background-image: url("../src/Background.png");
     /* background-image: url("./components/photos/background.jpg");*/
     background-repeat: no-repeat;
     background-size: cover;
