--- a/client/src/components/admin/Logo/Logo.css
+++ b/client/src/components/admin/Logo/Logo.css
@@ -10,5 +10,6 @@
   margin-top: 40px;
 }
 #btn {
-  background-color: #d7d1ac !important;
+  /* background-color: #d7d1ac !important; */
+  background-color: white;
 }
