--- a/client/src/components/public/Navbar/style.css
+++ b/client/src/components/public/Navbar/style.css
@@ -1,33 +1,76 @@
 .club-logo {
   border-radius: 100%;
-  height: 80px;
-  width: 80px;
+  height: 60px;
+  width: 60px;
+  margin: 3px;
 }
-.burger {
+
+.club-name{
+  color: black;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 2.3vw;
+  margin: 10px;
+  font-family: 'Helvetica Neue', sans-serif
+}
+
+.quick-links{
+  margin: auto;
+  text-align: center;
+  font-weight: 700;
+  color: black;
+  text-decoration: none;
+}
+
+.toggleDrawer{
   display: none;
 }
 
-.link{
+.quick-links:hover{
+  background: rgb(233, 233, 233);
     color: black;
-    font-weight: 700;
-    text-decoration: none;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
   .club-logo {
-    height: 50px;
-    width: 50px;
+    height: 30px;
+    width: 30px;
   }
   .club-name {
-    font-size: 20px;
+    font-size: 3vw;
+    color: black;
+    text-decoration: none;
+    font-weight: 700;
+
+    font-family: 'Helvetica Neue', sans-serif
   }
-  .quick-links {
-    font-size: 13px;
+  .club-logo-navbar {
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
   }
+  .quick-links{
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    font-weight: 700;
+  }
+
+  .quick-links:hover{
+    background: rgb(233, 233, 233);
+    color: black;
+  }
+
+  .drawer{
+    min-width: 85vw;
+  }
+
   .links-wrapper {
     display: none;
   }
-  .burger {
-    display: block;
+  .toggleDrawer {
+    display: flex;
+    flex-direction: row-reverse;
+    align-self: flex-end;
   }
 }
