--- a/client/src/components/public/Navbar/style.css
+++ b/client/src/components/public/Navbar/style.css
@@ -1,76 +1,122 @@
+.theme-orange{
+  --themeColor: #ff9600;
+}
+.theme-purple{
+  --themeColor: #DA28F6;
+}
+.theme-blue{
+  --themeColor: #35B6FF;
+}
+.theme-green{
+  --themeColor: #44CA5A;
+}
+.theme-yellow{
+  --themeColor: #FFD600;
+}
+.theme-pink{
+  --themeColor: #FF004C;
+}
 .club-logo {
-  border-radius: 100%;
-  height: 60px;
-  width: 60px;
-  margin: 3px;
+    border-radius: 100%;
+    height: 70px;
+    width: 70px;
+    margin: 5px;
 }
 
-.club-name{
-  color: black;
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 2.3vw;
-  margin: 10px;
-  font-family: 'Helvetica Neue', sans-serif
+.drawer {
+    width: 100;
 }
 
-.quick-links{
-  margin: auto;
-  text-align: center;
-  font-weight: 700;
-  color: black;
-  text-decoration: none;
+.quick-links {
+    font-style: normal;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 430;
+    color: #7e7e7e;
+    text-decoration: none;
 }
 
-.toggleDrawer{
-  display: none;
+.contactUs {
+    background-color: var(--themeColor);
+    border-radius: 100px;
+    font-style: normal;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 430;
+    color: white;
+    text-decoration: none;
+    box-shadow: 10px 10px 10px 10px var(--themeColor);
+    box-shadow: var(--themeColor) 0px 1px 10px 0px;
 }
 
-.quick-links:hover{
-  background: rgb(233, 233, 233);
+.toggleDrawer {
+    display: none;
+}
+
+.quick-links:hover {
     color: black;
+    font-weight: 500;
+}
+.contactUs:hover {
+    color: var(--themeColor);
+    font-weight: 500;
+    background-color: white;
 }
 
 @media only screen and (max-width: 700px) {
-  .club-logo {
-    height: 30px;
-    width: 30px;
-  }
-  .club-name {
-    font-size: 3vw;
-    color: black;
-    text-decoration: none;
-    font-weight: 700;
+    .club-logo {
+        height: 35px;
+        width: 35px;
+    }
+    .club-logo-navbar {
+        height: 50px;
+        width: 50px;
+        border-radius: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .quick-links {
+        margin-top: 13px;
+        text-align: center;
+        font-size: 17px;
+        font-weight: 430;
+        color: #7e7e7e;
+        text-decoration: none;
+        align-items: center;
+    }
 
-    font-family: 'Helvetica Neue', sans-serif
-  }
-  .club-logo-navbar {
-    height: 40px;
-    width: 40px;
-    border-radius: 100%;
-  }
-  .quick-links{
-    text-align: center;
-    color: black;
-    text-decoration: none;
-    font-weight: 700;
+    .contact {
+        margin: 0px;
+        text-align: center;
+        font-size: 17px;
+        font-weight: 430;
+        color: #7e7e7e;
+        text-decoration: none;
+    }
+
+    .contact:hover {
+      background: rgb(233, 233, 233);
+      color: black;
   }
 
-  .quick-links:hover{
-    background: rgb(233, 233, 233);
-    color: black;
-  }
+    .quick-links:hover {
+        background: rgb(233, 233, 233);
+        color: black;
+    }
 
-  .drawer{
-    min-width: 85vw;
-  }
+    .drawer {
+        min-width: 85vw;
+        margin: 0px;
+    }
 
-  .links-wrapper {
-    display: none;
-  }
-  .toggleDrawer {
-    display: flex;
-    flex-direction: row-reverse;
-    align-self: flex-end;
-  }
+    .links-wrapper {
+        display: none;
+    }
+    .toggleDrawer {
+        display: flex;
+        flex-direction: row-reverse;
+        align-self: flex-end;
+    }
 }
