--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,18 +1,15 @@
-
-
-
-
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
-  body {
+body {
     /* margin: 0px; */
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     /* background-color: rgb(255, 249, 223); */
@@ -21,24 +18,29 @@ html, body {
     background-color: white;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+}
 
-  code {
+code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-      monospace;
-  }
+        monospace;
+}
 
-  .App-header{
+.App-header {
     text-align: center;
-  }
+}
 
-  h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-bottom: 0 !important;
-  }
-  hr {
+}
+hr {
     margin: 0% !important;
-  }
-  a{
+}
+a {
     text-decoration: none;
-    color: black;
-  }
+    color: #000000;
+}
