fix google login and social media

--- a/client/src/components/admin/Form/Form.css
+++ b/client/src/components/admin/Form/Form.css
@@ -21,3 +21,15 @@
   background-color: white;
   margin-top: 15px;
 }
+
+
+.socialMediaInput{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.smi{
+    margin: 20px;
+}
