--- a/client/src/components/public/public.css
+++ b/client/src/components/public/public.css
@@ -203,7 +203,7 @@
 .heroIcons {
     font-size: 2vw;
     color: white;
-    margin: 2rem;
+    /* margin: 2rem; */
 }
 
 .heroIcons:hover {
@@ -258,7 +258,7 @@
 }
 .section-white-bg {
     background-image: linear-gradient(to right, var(--themeVLight), var(--themeVLight))
-    
+
 }
 .section-icon-white {
     color: white;
@@ -308,7 +308,7 @@
     font-size: 20px;
     margin-left: 10px;
   }
-  
+
   }
 
   /* Footer */
