--- a/client/src/components/public/public.css
+++ b/client/src/components/public/public.css
@@ -407,3 +407,11 @@
       text-align: center;
     }
   }
+
+.section-child-links{
+    display: flex;
+    flex-direction : row;
+    /* justify-content: space-between; */
+    margin: 20px;
+    /* padding: 2; */
+}
