--- a/client/src/components/admin/Modal/SocialModal.css
+++ b/client/src/components/admin/Modal/SocialModal.css
@@ -10,7 +10,7 @@
     align-items: center;
     z-index: 100;
   }
-  
+
   .modalContainer {
     width: 500px;
     height: 500px;
@@ -21,26 +21,26 @@
     flex-direction: column;
     padding: 25px;
   }
-  
+
   .modalContainer .title {
     display: inline-block;
     text-align: center;
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
-  
+
   .titleCloseBtn {
     display: flex;
     justify-content: flex-end;
   }
-  
+
   .titleCloseBtn button {
     background-color: transparent;
     border: none;
     font-size: 25px;
     cursor: pointer;
   }
-  
+
   .modalContainer .body {
     flex: 50%;
     display: flex;
@@ -50,14 +50,14 @@
     font-size: 1.7rem;
     text-align: center;
   }
-  
+
   .modalContainer .footer {
     flex: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  
+
   .modalContainer .footer button {
     width: 150px;
     height: 45px;
@@ -69,7 +69,7 @@
     font-size: 20px;
     cursor: pointer;
   }
-  
+
   #cancelBtn {
     background-color: crimson;
   }
@@ -77,3 +77,12 @@
   #saveBtn {
     background-color: green;
   }
+
+.instructrions{
+    font-size: small;
+    font-weight: lighter;
+}
+
+.inst {
+    margin-left: 200px;
+}
